$Id: History,v 1.60 2002-11-04 13:46:20 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov,  4th 2002 M.Dressel transport-V04-01-04
-----------------------------------------------------
- remove G4std:: where it does not belong to
- replace str() functions

Oct  31st, 2002 M.Dressel transport-V04-01-03
-----------------------------------------------------
- bug fix in G4MassGeometrySampler and G4ParallelGeometrySampler

Oct  28th, 2002 M.Dressel transport-V04-01-02
-----------------------------------------------------
- bug fix in G4MassGeometry

Oct  22th, 2002 M.Dressel internal_7_transport-V04-01-01
--------------------------------------------------------
- moving G4CellStoreScorer, G4TrackLogger
  to digits+hits/detector
- resolving G4SLRawValues

Oct  16th, 2002 M.Dressel internal_6_transport-V04-01-01
--------------------------------------------------------
- changes recomanded by codewizrd
- added GCellFinder concept

Oct  10th, 2002 M.Dressel transport-V04-01-01-internal-5
--------------------------------------------------------
- changing sampler concept: instead of separat samplers for
  all combinations of importance sampling, scoring, wieght roulette