@@ -1,4 +1,4 @@
-$Id: History,v 1.60 2002-11-04 13:46:20 gcosmo Exp $
+$Id: History,v 1.61 2002-11-08 23:52:33 jacek Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Nov, 8th, J.Generowicz
+- Copy auxiliary smooth trajectory point from PIF to ParticleChange
 
 Nov,  4th 2002 M.Dressel transport-V04-01-04
 -----------------------------------------------------
